# cinebar-generator

./: .gitignore  CMakeLists.txt  README.md  cinebar-generator.cpp  logger.cpp  logger.h  parser.cpp  parser.h
.github/workflows/: ci.yml
docs/: doxygen.txt
src/: cinebar-generator.cpp  cinebar_generator.cpp  cinebar_generator.h  frame_extractor.cpp  frame_extractor.h  logger.cpp  logger.h  main.cpp  parser.cpp  parser.h  types.h  utility.cpp  utility.h  video_processor.cpp  video_processor.h
tests/: test_cinebar_generator.cpp  test_frame_extractor.cpp  test_parser.cpp  test_video_processor.cpp
